different list format

--- a/index.html
+++ b/index.html
@@ -147,20 +147,21 @@
                 <p> 
 				  Submissions to this workshop are in the form of papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants. Working with other workshop participants on one's own problem is a unique opportunity to get input from a large number of experts. Examples include:
                 </p>
-				<ul>
-                    <li> </li>
-					<li>: </li>
-					<li>Applying design guidelines: after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</li>
-					<li>Algorithm design: based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</li>
-					<li>Confirming guidelines for algorithm design: based on an initial set of guidelines one wants to use for their algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</li>
-					<li>Establishing codes for a thematic analysis: based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</li>
-					<li>Establishing themes for a thematic analysis: based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</li>
-                </ul>
 				<dl>
 					<dt>Questionnaire creation:</dt>
-					<dd>- creating question formulations in small groups, discussing if questions measure intended constructs</dd>
+					<dd>creating question formulations in small groups, discussing if questions measure intended constructs</dd>
 					<dt>Instructions for study:</dt>
-					<dd>- letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
+					<dd>letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
+					<dt>Applying design guidelines:</dt>
+					<dd>after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</dd>
+					<dt>Algorithm design:</dt>
+					<dd>based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</dd>
+					<dt>Confirming guidelines for algorithm design:</dt>
+					<dd>based on an initial set of guidelines one wants to use for their algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</dd>
+					<dt>Establishing codes for a thematic analysis:</dt>
+					<dd>based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</dd>
+					<dt>Establishing themes for a thematic analysis:</dt>
+					<dd>based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</dd>
 				</dl>
 				<p>
 				  The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
