--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
             </div>
           </div>
         </div>
-        <div class="container yelloworange" id="thisworkshop">
+        <div class="container verylightorange" id="thisworkshop">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">This Workshop</h2>
               <div class="col-md feature">
-                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. Thus, while the Persuasive Technolog conference considers all forms of technology, the focus of this workshop is on algorithms (e.g., based on logistic regression, reinforcement learning, recommender systems) that support behavior change. We are thereby interested in algorithms at both the macro level (i.e., which are part of behavior change applications) and the micro level (i.e., which support forms of behavior change as part of a technology that has a goal other than behavior change). We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. </p>
+                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. Thus, while the Persuasive Technology conference considers all forms of technology, the focus of this workshop is on algorithms (e.g., based on logistic regression, reinforcement learning, recommender systems) that support behavior change. We are thereby interested in algorithms at both the macro level (i.e., which are part of behavior change applications) and the micro level (i.e., which support forms of behavior change as part of a technology that has a goal other than behavior change). We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. </p>
                 <p>The broader objective of this workshop is to strengthen the community of people working on adaptive support for behavior change. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
 				<p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
@@ -157,7 +157,7 @@
 					<dt>Algorithm design:</dt>
 					<dd>based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</dd>
 					<dt>Confirming guidelines for algorithm design:</dt>
-					<dd>based on an initial set of guidelines one wants to use for their algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</dd>
+					<dd>based on an initial set of guidelines one wants to use for one's algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</dd>
 					<dt>Establishing codes for a thematic analysis:</dt>
 					<dd>based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</dd>
 					<dt>Establishing themes for a thematic analysis:</dt>
@@ -180,7 +180,7 @@
             </div>
           </div>
         </div> 
-        <div class="container yelloworange" id="dates">
+        <div class="container verylightorange" id="dates">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Important Dates</h2>
@@ -232,7 +232,7 @@
         </div>
         <!-- End: Speakers -->
 
-        <div class="row me-row content-ct yelloworange" id="organizers">
+        <div class="row me-row content-ct verylightorange" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-4 feature">
             <img src="img/nele_albers.jpg" class="speaker-img">
@@ -352,7 +352,7 @@
         <div class="container" id="program">
           <div class="container">
             <div class="row me-row content-ct">
-              <h2 class="row-title">Program</h2>
+              <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
                 <table class="tg">
 
@@ -374,13 +374,13 @@
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
                       <td class="tg-lboi" rowspan="3">Session 1<br><br><i>Topic</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
                     </tr>
 					<tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
                     </tr>
                     <tr>
                       <td class="tg-lboi">12h15</td>
@@ -397,13 +397,13 @@
 					<tr>
                       <td class="tg-lboi" rowspan="3">14h45</td>
                       <td class="tg-lboi" rowspan="3">Session 2<br><br><i>Topic</i></td>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
                     </tr>
 					<tr>
-                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
                     </tr>
 					<tr>
                       <td class="tg-cly1">16h45</td>
@@ -424,7 +424,7 @@
           </div>
         </div>
 
-        <div class="container yelloworange" id="registration">
+        <div class="container verylightorange" id="registration">
           <div class="container">
             <div class="row me-row content-ct">
               <h2 class="row-title">Registration</h2>
