--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="row me-row content-ct">
             <h2 class="row-title">Motivation</h2>
             <div class="col-md feature">
-              <p>Working out more, reducing food waste, being kinder to others, ... - there are many behaviors people wish to change. Yet, while many behavior change applications have been developed to support people, users commonly do not adhere to these applications or abandon them entirely. To address the evident mismatch between what the applications offer and what users need, a variety of algorithmic approaches has been developed to adapt what the applications offer, when, how, and with whom. These algorithmic approaches thereby draw from insights in areas such as nudging, persuasive technology, eCoaches, and conversational agents and use various algorithmic techniques from recommender systems to machine and reinforcement learning. Placing the human at the center and combining the strengths of humans and technology (i.e., augmented or hybrid intelligence) often is an important design guideline, as is accounting for ethical and societal values.</p>
+              <p>Working out more, reducing food waste, being kinder to others, ... - there are many behaviors people wish to change. Yet, while many behavior change applications have been developed to support people, users commonly do not adhere to these applications or abandon them entirely. To address the evident mismatch between what the applications offer and what users need, a variety of algorithmic approaches has been developed to adapt what the applications offer, when, how, and with whom. The term "algorithm" or "algorithmic approach" is thereby meant broadly to capture any computerized procedure for adapting behavior change support. These algorithmic approaches thereby draw from insights in areas such as nudging, persuasive technology, eCoaches, and conversational agents and use various algorithmic techniques from recommender systems to machine and reinforcement learning. Placing the human at the center and combining the strengths of humans and technology (i.e., augmented or hybrid intelligence) often is an important design guideline, as is accounting for ethical and societal values.</p>
             </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
 				<p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
-                    <li>Design methods and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
+                    <li>Methods and guidelines that can be used for designing algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
 					<li>Novel algorithms</li>
 					<li>Application of algorithms in behavior change contexts</li>
 					<li>FAIR implementation of algorithms</li>
