--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                 </p>
 				<dl>
 					<dt>Questionnaire creation:</dt>
-					<dd>creating question formulations in small groups, discussing if questions measure intended constructs</dd>
+					<dd>-> creating question formulations in small groups, discussing if questions measure intended constructs</dd>
 					<dt>Study design:</dt>
-					<dd>getting feedback on one's draft experimental design for evaluating an algorithm</dd>
+					<dd>-> getting feedback on one's draft experimental design for evaluating an algorithm</dd>
 					<dt>Instructions for study:</dt>
 					<dd>letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
 					<dt>Applying design guidelines:</dt>
