added more arrows problem examples

--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
 					<dt>Study design:</dt>
 					<dd>-> getting feedback on one's draft experimental design for evaluating an algorithm</dd>
 					<dt>Instructions for study:</dt>
-					<dd>letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
+					<dd>-> letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
 					<dt>Applying design guidelines:</dt>
-					<dd>after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</dd>
+					<dd>-> after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</dd>
 					<dt>Algorithm design:</dt>
-					<dd>based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</dd>
+					<dd>-> based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</dd>
 					<dt>Confirming guidelines for algorithm design:</dt>
-					<dd>based on an initial set of guidelines one wants to use for one's algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</dd>
+					<dd>-> based on an initial set of guidelines one wants to use for one's algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</dd>
 					<dt>Establishing codes for a thematic analysis:</dt>
-					<dd>based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</dd>
+					<dd>-> based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</dd>
 					<dt>Establishing themes for a thematic analysis:</dt>
-					<dd>based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</dd>
+					<dd>-> based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</dd>
 				</dl>
 				<p>
 				  The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
