--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 				<p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
-                    <li>Methods and guidelines that can be used for designing algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
+                    <li>Methods and guidelines that can be used when designing algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
 					<li>Novel algorithms</li>
-					<li>Application of algorithms in behavior change contexts</li>
+					<li>Application of algorithms in behavior change contexts (e.g., education, health, sustainability) </li>
 					<li>FAIR implementation of algorithms</li>
 					<li>Evaluation methods for algorithms (e.g., micro-randomized trials)</li>
 					<li>Effectiveness of (components of) algorithms in simulated, experimental, or in-the-wild settings</li>
