--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     </tr>
                     <tr>
                       <td class="tg-cly1">13h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2: Human-Empowered Computer-Mediated Behavior Change (Deborah Richards)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">14h30</td>
