--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
             <div class="col-md-8 feature">
               <h3>Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes</h3>
-              <p><b>Abstract.</b> The multi-armed bandit (MAB) framework holds great promise for designing adaptive experiments with outcomes and resource (e.g., cost, time, or sample size) benefits. For example, it can result in better participant outcomes <i>and</i> improved statistical power at the end of a trial. However, due to mathematical and computational aspects, most MAB variants have been developed and are implemented under binary or normal outcome models. In this talk, guided by three case studies we have designed, I will illustrate how traditional statistics can be integrated within this framework to enhance its potential. Specifically, I will focus on the most popular Bayesian MAB algorithm, Thompson sampling, and on two types of outcomes: (i) rating scales, increasingly common in recommendation systems, digital health and education, and (ii) zero-inflated data, characterizing mobile health experiments. Theoretical properties and empirical advantages in terms of balancing <i>exploitation</i>(outcome performance) and <i>exploration</i> (learning performance) will be presented. Further considerations will be provided in the unique and challenging case of small samples.</p>
+              <p><b>Abstract.</b> The multi-armed bandit (MAB) framework holds great promise for designing adaptive experiments with outcomes and resource (e.g., cost, time, or sample size) benefits. For example, it can result in better participant outcomes <i>and</i> improved statistical power at the end of a trial. However, due to mathematical and computational aspects, most MAB variants have been developed and are implemented under binary or normal outcome models. In this talk, guided by three case studies we have designed, I will illustrate how traditional statistics can be integrated within this framework to enhance its potential. Specifically, I will focus on the most popular Bayesian MAB algorithm, Thompson sampling, and on two types of outcomes: (i) rating scales, increasingly common in recommendation systems, digital health and education, and (ii) zero-inflated data, characterizing mobile health experiments. Theoretical properties and empirical advantages in terms of balancing <i>exploitation</i> (outcome performance) and <i>exploration</i> (learning performance) will be presented. Further considerations will be provided in the unique and challenging case of small samples.</p>
               <p></p>
             </div>
           </div>
@@ -370,7 +370,7 @@
                   <tbody>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Keynote 1: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
+                      <td class="tg-lboi" colspan="2">Keynote 1 - Nina Deliu: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">10h00</td>
@@ -393,7 +393,7 @@
                     </tr>
                     <tr>
                       <td class="tg-cly1">13h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2: Human-Empowered Computer-Mediated Behavior Change (Deborah Richards)</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2 - Deborah Richards: Human-Empowered Computer-Mediated Behavior Change</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">14h30</td>
