--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                   <tbody>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Keynote 1 - Nina Deliu: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes</td>
+                      <td class="tg-lboi" colspan="2">Keynote 1: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">10h00</td>
@@ -393,7 +393,7 @@
                     </tr>
                     <tr>
                       <td class="tg-cly1">13h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2 - Deborah Richards: Human-Empowered Computer-Mediated Behavior Change</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2: Human-empowered computer-mediated behavior change (Deborah Richards)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">14h30</td>
