--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
               <h2 class="row-title">Important Dates</h2>
               <div class="col-md feature">
                 <ul>
-                  <li>Submission deadline: 22nd February 2024 </li>
-                  <li>Notification deadline: 29th February 2024 </li>
+                  <li>Submission deadline: <s>22nd February 2024</s> 9th March 2024 </li>
+                  <li>Notification deadline: <s> 29th February 2024 </s> 13th March 2024 </li>
                   <li>Camera Ready: 3rd April 2024 </li>
                   <li>Workshop: 10th April 2024</li>
                 </ul>
