add accepted papers

--- a/index.html
+++ b/index.html
@@ -359,6 +359,14 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
+			    <p> We already have two accepted talks: </p>
+				<ul>
+                    <li> <b>Expert Insights on Conversational AI Systems as an Information Intermediary for Patients and Healthcare Providers for Diabetes Lifestyle Change </b> by Pei-Yu Chen, Sophie van Gent, M. Birna van Riemsdijk, Myrthe Tielman and Tjeerd Schoonderwoerd </li>
+                    <li> <b>Explanation Patterns for The Sleep Adherence Mentor (SAM)</b> by Amal Abdulrahman, Deborah Richards, Patrina Caldwell and Karen Waters </li>
+                </ul>
+				<p></p>
+				<p>Below is a tentative program</p>
+				<p></p>
                 <table class="tg">
 
                   <thead>
