--- a/index.html
+++ b/index.html
@@ -359,11 +359,12 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
-			    <p> We already have two accepted talks: </p>
+			    <p> We already have three accepted talks: </p>
 				<ul>
                     <li> 1) <b>Expert Insights on Conversational AI Systems as an Information Intermediary for Patients and Healthcare Providers for Diabetes Lifestyle Change </b> by Pei-Yu Chen, Sophie van Gent, M. Birna van Riemsdijk, Myrthe Tielman and Tjeerd Schoonderwoerd </li>
                     <li> 2) <b>Explanation Patterns for The Sleep Adherence Mentor (SAM)</b> by Amal Abdulrahman, Deborah Richards, Patrina Caldwell and Karen Waters </li>
-                </ul>
+                    <li> 3) <b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b> by Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</li>
+				</ul>
 				<p></p>
 				<p>Below is a tentative program:</p>
 				<p></p>
