--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             <h1>ALBECS-2024: Workshop on Algorithmic Behavior Change Support</h1>
             <h3>10<sup>th</sup> April 2024</h3>
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
-            <h4>Wollongong, Australia</h4>
+            <h4>In-person in Wollongong, Australia and with a hybrid morning session</h4>
+			<h4></h4>
             
             <a href="https://easychair.org/conferences/?conf=albecs2024" class="btn btn-lg btn-red">Submit Now <span class="ti-arrow-right"></span></a>
           </div>
@@ -387,7 +388,7 @@
                     </tr>
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
-                      <td class="tg-lboi" rowspan="3">Session 1<br><br><i>Topic</i></td>
+                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Topic</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
@@ -410,7 +411,7 @@
                     </tr>
 					<tr>
                       <td class="tg-lboi" rowspan="3">14h45</td>
-                      <td class="tg-lboi" rowspan="3">Session 2<br><br><i>Topic</i></td>
+                      <td class="tg-lboi" rowspan="3">Session 2 (In-person only)<br><br><i>Topic</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
