--- a/index.html
+++ b/index.html
@@ -360,13 +360,6 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
-			    <p> We already have three accepted in-person talks: </p>
-				<ul>
-                    <li> 1) <b>Expert Insights on Conversational AI Systems as an Information Intermediary for Patients and Healthcare Providers for Diabetes Lifestyle Change </b> by Pei-Yu Chen, Sophie van Gent, M. Birna van Riemsdijk, Myrthe Tielman and Tjeerd Schoonderwoerd </li>
-                    <li> 2) <b>Explanation Patterns for The Sleep Adherence Mentor (SAM)</b> by Amal Abdulrahman, Deborah Richards, Patrina Caldwell and Karen Waters </li>
-                    <li> 3) <b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b> by Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</li>
-				</ul>
-				<p></p>
 				<p>Below is a tentative program:</p>
 				<p></p>
                 <table class="tg">
@@ -389,16 +382,16 @@
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
                       <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Topic</i></td>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
-                    </tr>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Integrating Digital Calendars with Large Language Models for Stress Management Interventions</b></a><br><i>Pranav Rao, Sarah Yi Xu, Ananya Bhattacharjee, Yuchen Zeng, Alex Mariakakis and Joseph Jay Williams</i></td>
+					</tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
-                    </tr>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Expert Insights on Conversational AI Systems as an Information Intermediary for Patients and Healthcare Providers for Diabetes Lifestyle Change</b></a><br><i> Pei-Yu Chen, Sophie van Gent, M. Birna van Riemsdijk, Myrthe Tielman and Tjeerd Schoonderwoerd</i></td>
+					</tr>
 					<tr>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Explanation Patterns for The Sleep Adherence Mentor (SAM)</b></a><br><i>Amal Abdulrahman, Deborah Richards, Patrina Caldwell and Karen Waters</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-lboi">12h15</td>
+                      <td class="tg-lboi">12h30</td>
                       <td class="tg-vrnj" colspan="2">Lunch</td>
                     </tr>
                     <tr>
@@ -412,16 +405,13 @@
 					<tr>
                       <td class="tg-lboi" rowspan="3">14h45</td>
                       <td class="tg-lboi" rowspan="3">Session 2 (In-person only)<br><br><i>Topic</i></td>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b></a><br><i>Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Algorithmic Support for Health Behavior Change: A Scoping Review</b></a><br><i>Diederik Heijbroek, Nele Albers and Willem-Paul Brinkman</i></td>
                     </tr>
 					<tr>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
-                    </tr>
-					<tr>
-                      <td class="tg-cly1">16h45</td>
+                      <td class="tg-cly1">16h00</td>
                       <td class="tg-cly1" colspan="2">Reflection</td>
                     </tr>
                     <tr>
