--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h4>In-person in Wollongong, Australia and with a hybrid morning session</h4>
 			<h4></h4>
             
-            <a href="https://easychair.org/conferences/?conf=albecs2024" class="btn btn-lg btn-red">Submit Now <span class="ti-arrow-right"></span></a>
+            <a href="https://2024.persuasivetech.org/index.php/registration/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
             <img src="img/conversation.png" class="rocket animated bounce">
