--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     </tr>
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
-                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Topic</i></td>
+                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Algorithms for specific eHealth applications</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Integrating Digital Calendars with Large Language Models for Stress Management Interventions</b></a><br><i>Pranav Rao, Sarah Yi Xu, Ananya Bhattacharjee, Yuchen Zeng, Alex Mariakakis and Joseph Jay Williams</i></td>
 					</tr>
                     <tr>
@@ -403,8 +403,8 @@
                       <td class="tg-vrnj" colspan="2">Break</td>
                     </tr>
 					<tr>
-                      <td class="tg-lboi" rowspan="3">14h45</td>
-                      <td class="tg-lboi" rowspan="3">Session 2 (In-person only)<br><br><i>Topic</i></td>
+                      <td class="tg-lboi" rowspan="2">14h45</td>
+                      <td class="tg-lboi" rowspan="2">Session 2 (In-person only)<br><br><i>Guidelines for algorithm design</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b></a><br><i>Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</i></td>
                     </tr>
                     <tr>
