--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
                     </tr>
 					<tr>
                       <td class="tg-cly1">16h00</td>
-                      <td class="tg-cly1" colspan="2">Reflection</td>
+                      <td class="tg-cly1" colspan="2">Reflection and closing remarks</td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1">17h00</td>
+                      <td class="tg-cly1">16h30</td>
                       <td class="tg-vrnj" colspan="2">End</td>
                     </tr>     
                     <tr>
