--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     </tr>
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
-                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Algorithms for eHealth applications</i></td>
+                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Personalizing eHealth applications</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Integrating Digital Calendars with Large Language Models for Stress Management Interventions</b></a><br><i>Pranav Rao, Sarah Yi Xu, Ananya Bhattacharjee, Yuchen Zeng, Alex Mariakakis and Joseph Jay Williams</i></td>
 					</tr>
                     <tr>
