--- a/index.html
+++ b/index.html
@@ -371,6 +371,10 @@
                     </tr>
                   </thead>
                   <tbody>
+				    <tr>
+                      <td class="tg-lboi">8h30</td>
+                      <td class="tg-vrnj" colspan="2">Registration & morning tea</td>
+                    </tr>
                     <tr>
                       <td class="tg-lboi">9h00</td>
                       <td class="tg-lboi" colspan="2">Keynote 1: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
@@ -394,16 +398,8 @@
                       <td class="tg-lboi">12h30</td>
                       <td class="tg-vrnj" colspan="2">Lunch</td>
                     </tr>
-                    <tr>
-                      <td class="tg-cly1">13h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2: Human-empowered computer-mediated behavior change (Deborah Richards)</td>
-                    </tr>
 					<tr>
-                      <td class="tg-lboi">14h30</td>
-                      <td class="tg-vrnj" colspan="2">Break</td>
-                    </tr>
-					<tr>
-                      <td class="tg-lboi" rowspan="2">14h45</td>
+                      <td class="tg-lboi" rowspan="2">13h30</td>
                       <td class="tg-lboi" rowspan="2">Session 2 (In-person only)<br><br><i>Guidelines for algorithm design</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b></a><br><i>Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</i></td>
                     </tr>
@@ -411,11 +407,19 @@
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Algorithmic Support for Health Behavior Change: A Scoping Review</b></a><br><i>Diederik Heijbroek, Nele Albers and Willem-Paul Brinkman</i></td>
                     </tr>
 					<tr>
-                      <td class="tg-cly1">16h00</td>
-                      <td class="tg-cly1" colspan="2">Reflection and closing remarks</td>
+                      <td class="tg-lboi">15h15</td>
+                      <td class="tg-vrnj" colspan="2">Afternoon tea</td>
+                    </tr>
+					<tr>
+                      <td class="tg-cly1">15h30</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2: Human-empowered computer-mediated behavior change (Deborah Richards)</td>
+                    </tr>
+					<tr>
+                      <td class="tg-cly1">16h30</td>
+                      <td class="tg-cly1" colspan="2">Reflection & closing remarks</td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1">16h30</td>
+                      <td class="tg-cly1">17h00</td>
                       <td class="tg-vrnj" colspan="2">End</td>
                     </tr>     
                     <tr>
