--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                     </tr>
                     <tr>
                       <td class="tg-cly1">17h00</td>
-                      <td class="tg-vrnj" colspan="2">End</td>
+                      <td class="tg-vrnj" colspan="2">Conference welcome reception</td>
                     </tr>     
                     <tr>
                       <td class="tg-cly1">19h00</td>
