add joining online link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h4>In-person in Wollongong, Australia and with a hybrid morning session</h4>
 			<h4></h4>
             
-            <a href="https://2024.persuasivetech.org/index.php/registration/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
+            <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join" class="btn btn-lg btn-red">Register for joining online<span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
             <img src="img/conversation.png" class="rocket animated bounce">
@@ -361,7 +361,8 @@
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
                 <table class="tg">
-
+					<p> To receive the link for joining the hybrid morning session online, <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join">join our Google group</a>. We will share the link with group members at least 30 minutes before the start of the first keynote.</p>
+					<p> </p>
                   <thead>
                     <tr>
                       <th class="tg-uzvj">Time</th>
@@ -375,7 +376,7 @@
                     </tr>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Keynote 1: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
+                      <td class="tg-lboi" colspan="2">Keynote 1 (Hybrid): Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">10h00</td>
@@ -410,7 +411,7 @@
                     </tr>
 					<tr>
                       <td class="tg-cly1">15h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2: Human-empowered computer-mediated behavior change (Deborah Richards)</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2 (In-person only): Human-empowered computer-mediated behavior change (Deborah Richards)</td>
                     </tr>
 					<tr>
                       <td class="tg-cly1">16h30</td>
