update online joining

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h1>ALBECS-2024: Workshop on Algorithmic Behavior Change Support</h1>
             <h3>10<sup>th</sup> April 2024</h3>
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
-            <h4>In-person in Wollongong, Australia and with a hybrid morning session</h4>
+            <h4>In-person in Wollongong, Australia & with a hybrid morning session</h4>
 			<h4></h4>
             
             <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join" class="btn btn-lg btn-red">Register for joining online<span class="ti-arrow-right"></span></a>
