--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
                       <td class="tg-lboi">8h30</td>
                       <td class="tg-vrnj" colspan="2">Registration & morning tea</td>
                     </tr>
+					<tr bgcolor="lightblue">
+                      <td class="tg-vrnj" colspan="3">Morning session</td>
+                    </tr>
                     <tr>
                       <td class="tg-lboi">9h00</td>
                       <td class="tg-lboi" colspan="2">Keynote 1 (Hybrid): Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
@@ -396,6 +399,9 @@
                     <tr>
                       <td class="tg-lboi">12h30</td>
                       <td class="tg-vrnj" colspan="2">Lunch</td>
+                    </tr>
+					<tr bgcolor="lightblue">
+                      <td class="tg-vrnj" colspan="3">Afternoon session</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi" rowspan="2">13h30</td>
