--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
                       <td class="tg-vrnj" colspan="2">Registration & morning tea</td>
                     </tr>
 					<tr bgcolor="lightblue">
-                      <td class="tg-vrnj" colspan="3">Morning session</td>
+                      <td class="tg-lboi" colspan="3">Morning session (hybrid)</td>
                     </tr>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Keynote 1 (Hybrid): Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
+                      <td class="tg-lboi" colspan="2">Keynote 1: Designing experiments <i>via</i> bandit algorithms: modeling considerations for better outcomes (Nina Deliu)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">10h00</td>
@@ -387,7 +387,7 @@
                     </tr>
                     <tr>
                       <td class="tg-lboi" rowspan="3">10h15</td>
-                      <td class="tg-lboi" rowspan="3">Session 1 (Hybrid)<br><br><i>Personalizing eHealth applications</i></td>
+                      <td class="tg-lboi" rowspan="3">Session 1<br><br><i>Personalizing eHealth applications</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Integrating Digital Calendars with Large Language Models for Stress Management Interventions</b></a><br><i>Pranav Rao, Sarah Yi Xu, Ananya Bhattacharjee, Yuchen Zeng, Alex Mariakakis and Joseph Jay Williams</i></td>
 					</tr>
                     <tr>
@@ -401,11 +401,11 @@
                       <td class="tg-vrnj" colspan="2">Lunch</td>
                     </tr>
 					<tr bgcolor="lightblue">
-                      <td class="tg-vrnj" colspan="3">Afternoon session</td>
+                      <td class="tg-lboi" colspan="3">Afternoon session (in-person only)</td>
                     </tr>
 					<tr>
                       <td class="tg-lboi" rowspan="2">13h30</td>
-                      <td class="tg-lboi" rowspan="2">Session 2 (In-person only)<br><br><i>Guidelines for algorithm design</i></td>
+                      <td class="tg-lboi" rowspan="2">Session 2<br><br><i>Guidelines for algorithm design</i></td>
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b></a><br><i>Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</i></td>
                     </tr>
                     <tr>
@@ -417,7 +417,7 @@
                     </tr>
 					<tr>
                       <td class="tg-cly1">15h30</td>
-                      <td class="tg-cly1" colspan="2">Keynote 2 (In-person only): Human-empowered computer-mediated behavior change (Deborah Richards)</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2: Human-empowered computer-mediated behavior change (Deborah Richards)</td>
                     </tr>
 					<tr>
                       <td class="tg-cly1">16h30</td>
