add online link to registration

--- a/index.html
+++ b/index.html
@@ -444,7 +444,8 @@
               <h2 class="row-title">Registration</h2>
               <div class="col-md feature">
                 <p>Please register through <a href="https://2024.persuasivetech.org/index.php/registration/">the Persuasive Technology conference website</a>. Note that registration fees are in Australian Dollar (AUD).</p>
-              </div>
+                <p>To receive the link for joining the hybrid morning session online, <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join">join our Google group</a>. We will share the link with group members at least 30 minutes before the start of the first keynote.</p>
+			  </div>
             </div>
           </div>
         </div>
