--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                       <td class="tg-vrnj" colspan="2">Registration & morning tea</td>
                     </tr>
 					<tr bgcolor="lightblue">
-                      <td class="tg-lboi" colspan="3">Morning session (hybrid)</td>
+                      <td class="tg-cly1" colspan="3"><b>Morning session (hybrid)</b></td>
                     </tr>
                     <tr>
                       <td class="tg-lboi">9h00</td>
@@ -401,7 +401,7 @@
                       <td class="tg-vrnj" colspan="2">Lunch</td>
                     </tr>
 					<tr bgcolor="lightblue">
-                      <td class="tg-lboi" colspan="3">Afternoon session (in-person only)</td>
+                      <td class="tg-cly1" colspan="3"><b>Afternoon session (in-person only)</b></td>
                     </tr>
 					<tr>
                       <td class="tg-lboi" rowspan="2">13h30</td>
