add section evening program

--- a/index.html
+++ b/index.html
@@ -423,6 +423,9 @@
                       <td class="tg-cly1">16h30</td>
                       <td class="tg-cly1" colspan="2">Reflection & closing remarks</td>
                     </tr>
+					<tr bgcolor="lightblue">
+                      <td class="tg-vrnj" colspan="3"><b>Evening program</b></td>
+                    </tr>
                     <tr>
                       <td class="tg-cly1">17h00</td>
                       <td class="tg-vrnj" colspan="2">Conference welcome reception</td>
