add collaborative session explanation in program

--- a/index.html
+++ b/index.html
@@ -361,6 +361,8 @@
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
                 <table class="tg">
+				    <p> This workshop has two keynotes by Nina Deliu and Deborah Richards and five paper presentations. Each of the five paper presentations consists of a short presentation and a collaborative session in which workshop participants together work on a problem presented by the authors.</p>
+					<p> </p>
 					<p> To receive the link for joining the hybrid morning session online, <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join">join our Google group</a>. We will share the link with group members at least 30 minutes before the start of the first keynote.</p>
 					<p> </p>
                   <thead>
@@ -409,7 +411,7 @@
                       <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Advancing Ethical and Inclusive Algorithm Design: Collaborative Strategies for Bias Detection and Mitigation</b></a><br><i>Adeel Ahmed, Ali Husnain and Abdul Wahid Toor</i></td>
                     </tr>
                     <tr>
-                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Algorithmic Support for Health Behavior Change: A Scoping Review</b></a><br><i>Diederik Heijbroek, Nele Albers and Willem-Paul Brinkman</i></td>
+                      <td class="tg-cly1"><a href="https://2024.persuasivetech.org/"><b>Algorithmic Support for Health Behavior Change: A Scoping Review Protocol</b></a><br><i>Diederik Heijbroek, Nele Albers and Willem-Paul Brinkman</i></td>
                     </tr>
 					<tr>
                       <td class="tg-lboi">15h15</td>
