add collaborative session explanation in program

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <h2 class="row-title">Tentative Program</h2>
               <div class="col-md feature">
                 <table class="tg">
-				    <p> This workshop has two keynotes by Nina Deliu and Deborah Richards and five paper presentations. Each of the five paper presentations consists of a short presentation and a collaborative session in which workshop participants together work on a problem presented by the authors.</p>
+				    <p> This workshop consists of two keynotes by Nina Deliu and Deborah Richards and five paper presentations. Each of the five paper presentations consists of a short presentation and a collaborative session in which workshop participants together work on a problem presented by the authors.</p>
 					<p> </p>
 					<p> To receive the link for joining the hybrid morning session online, <a href="https://groups.google.com/forum/#!forum/albecs-2024-workshop/join">join our Google group</a>. We will share the link with group members at least 30 minutes before the start of the first keynote.</p>
 					<p> </p>
